feat: updated the route with phaseID and titleId
